Automatically backed up by Learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,16 @@
-
-
-
+<h1>Here's your team!</h1>
+<ul>
+  <li>Team name: <%=@team_name%></li>
+  <li>Team motto: <%=@team_motto%></li>
+  <br>
+  <li>Hero 1 name: <%=@member1_name%></li>
+  <li>Hero 1 power: <%=@member1_power%></li>
+  <li>Hero 1 bio: <%=@member1_bio%></li>
+  <br>
+  <li>Hero 2 name: <%=@member2_name%></li>
+  <li>Hero 2 power: <%=@member2_power%></li>
+  <li>Hero 2 bio: <%=@member2_bio%></li>
+  <br>
+  <li>Hero 3 name: <%=@member3_name%></li>
+  <li>Hero 3 power: <%=@member3_power%></li>
+  <li>Hero 3 bio: <%=@member3_bio%></li>
