Automatically backed up by Learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -3,14 +3,14 @@
   <li>Team name: <%=@team_name%></li>
   <li>Team motto: <%=@team_motto%></li>
   <br>
-  <li>Hero 1 name: <%=@member1_name%></li>
-  <li>Hero 1 power: <%=@member1_power%></li>
-  <li>Hero 1 bio: <%=@member1_bio%></li>
+  <li>Hero Name: <%=@member1_name%></li>
+  <li>Hero Power: <%=@member1_power%></li>
+  <li>Hero Bio: <%=@member1_bio%></li>
   <br>
-  <li>Hero 2 name: <%=@member2_name%></li>
-  <li>Hero 2 power: <%=@member2_power%></li>
-  <li>Hero 2 bio: <%=@member2_bio%></li>
+  <li>Hero Name: <%=@member2_name%></li>
+  <li>Hero Power: <%=@member2_power%></li>
+  <li>Hero Bio: <%=@member2_bio%></li>
   <br>
-  <li>Hero 3 name: <%=@member3_name%></li>
-  <li>Hero 3 power: <%=@member3_power%></li>
-  <li>Hero 3 bio: <%=@member3_bio%></li>
+  <li>Hero Name: <%=@member3_name%></li>
+  <li>Hero Power: <%=@member3_power%></li>
+  <li>Hero Bio: <%=@member3_bio%></li>
