Automatically backed up by Learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -3,6 +3,6 @@
 
 <% @team_members.each.with_index do |hero, index| %>
   <h2>Hero Name: <%= @hero_name[index] %></h2>
-    Hero Power: JavaScript<%= @hero_power[index] %>
+    Hero Power: <%= @hero_power[index] %>
     Hero Biography: <%= @hero_bio[index] %>
 <% end %>
