--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -8,15 +8,15 @@
 <h2>Hero 1</h2>
 <label for="member1_name">Hero's Name:</label>
 <input type="text" id="member1_name" name="team[member][][name]">
-<label for="member1_power">Hero's Power:</label>
+<label for="member1_power">Hero Power:</label>
 <input type="text" id="member1_power" name="team[member][][power]">
 <label for="member1_bio">Hero Biography:</label>
 <input type="text" id="member1_bio" name="team[member][][bio]">
 <br>
 <h2>Hero 2</h2>
-<label for="member2_name">Hero's Name:</label>
+<label for="member2_name">Hero Name:</label>
 <input type="text" id="member2_name" name="team[member][][name]">
-<label for="member2_power">Hero's Power:</label>
+<label for="member2_power">Hero Power:</label>
 <input type="text" id="member2_power" name="team[member][][power]">
 <label for="member2_bio">Hero Biography:</label>
 <input type="text" id="member2_bio" name="team[member][][bio]">
