Automatically backed up by Learn

--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -6,7 +6,7 @@
 <input type="text" id="team_motto" name="team[motto]">
 <br>
 <h2>Hero 1</h2>
-<label for="member1_name">Hero's Name:</label>
+<label for="member1_name">Hero Name:</label>
 <input type="text" id="member1_name" name="team[member][][name]">
 <label for="member1_power">Hero Power:</label>
 <input type="text" id="member1_power" name="team[member][][power]">
