--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -22,9 +22,9 @@
 <input type="text" id="member2_bio" name="team[member][][bio]">
 <br>
 <h2>Hero 3</h2>
-<label for="member3_name">Hero's Name:</label>
+<label for="member3_name">Hero Name:</label>
 <input type="text" id="member3_name" name="team[member][][name]">
-<label for="member3_power">Hero's Power:</label>
+<label for="member3_power">Hero Power:</label>
 <input type="text" id="member3_power" name="team[member][][power]">
 <label for="member3_bio">Hero Biography:</label>
 <input type="text" id="member3_bio" name="team[member][][bio]">
