--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,32 +1,23 @@
-<h1>Create a Team and Heroes!</h1>
-<form action='/teams' method="POST">
-<label for="team_name">Team Name:</label>
-<input type="text" id="team_name" name="team[name]">
-<label for="team_motto">Team Motto:</label>
-<input type="text" id="team_motto" name="team[motto]">
-<br>
-<h2>Hero 1</h2>
-<label for="member1_name">Hero Name:</label>
-<input type="text" id="member1_name" name="team[member][][name]">
-<label for="member1_power">Hero Power:</label>
-<input type="text" id="member1_power" name="team[member][][power]">
-<label for="member1_bio">Hero Biography:</label>
-<input type="text" id="member1_bio" name="team[member][][bio]">
-<br>
-<h2>Hero 2</h2>
-<label for="member2_name">Hero Name:</label>
-<input type="text" id="member2_name" name="team[member][][name]">
-<label for="member2_power">Hero Power:</label>
-<input type="text" id="member2_power" name="team[member][][power]">
-<label for="member2_bio">Hero Biography:</label>
-<input type="text" id="member2_bio" name="team[member][][bio]">
-<br>
-<h2>Hero 3</h2>
-<label for="member3_name">Hero Name:</label>
-<input type="text" id="member3_name" name="team[member][][name]">
-<label for="member3_power">Hero Power:</label>
-<input type="text" id="member3_power" name="team[member][][power]">
-<label for="member3_bio">Hero Biography:</label>
-<input type="text" id="member3_bio" name="team[member][][bio]">
-<button type="submit" value="submit">Submit</button>
+
+<h2>Create a Team and Heroes!</h2>
+<form method="POST" action="/teams">
+  Team Name: <input type="text" name="team[name]"><br />
+  Team Motto: <input type="text" name="team[motto]"><br />
+
+  <h3>Hero 1</h3>
+  Hero's Name: <input type="text" id="member1_name" name="team[members][][name]"><br />
+  Hero's Power: <input type="text" id="member1_power" name="team[members][][power]"><br />
+  Hero's Bio: <input type="text" id="member1_bio" name="team[members][][bio]"><br />
+
+  <h3>Hero 2</h3>
+  Hero's Name: <input type="text" id="member2_name" name="team[members][][name]"><br />
+  Hero's Power:<input type="text" id="member2_power" name="team[members][][power]"><br />
+  Hero's Bio: <input type="text" id="member2_bio" name="team[members][][bio]"><br />
+
+  <h3>Hero 3</h3>
+  Hero's Name: <input type="text" id="member3_name" name="team[members][][name]"><br />
+  Hero's Power:<input type="text" id="member3_power" name="team[members][][power]"><br />
+  Hero's Bio: <input type="text" id="member3_bio" name="team[members][][bio]"><br />
+
+  <button id="submit" type="submit">Submit</button>
 </form>
