--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,8 +1,10 @@
-<h1><%= @team_name %></h1>
-<h2>Team Motto: <%= @team_motto %></h2>
 
-<% @team_members.each.with_index do |hero, index| %>
-  <h2>Hero Name: <%= @hero_name[index] %></h2>
-    Hero Power: <%= @hero_power[index] %>
-    Hero Biography: <%= @hero_bio[index] %>
+<h1>Team Name:</h1> <%= @team.name %>
+<h2>Team Motto:</h2> <%= @team.motto %>
+
+<h1>Heroes</h1>
+<% @super_heroes.each do |hero| %>
+<p>Hero Name: <%= hero.name %></p>
+<p>Hero Power: <%= hero.power %></p>
+<p>Hero Biography: <%= hero.bio %></p>
 <% end %>
